# airplane_tickets_service

./: .gitignore  CMakeLists.txt  README.md
FileProcessorHelper/: JsonParser.cpp  JsonParser.h
include/: Airplane.h  BookingContext.h  ConsoleProcessor.h  FileProcessor.h  Flight.h  PurchaseProcessor.h  Seat.h  Student.h  Ticket.h  User.h
src/: main.cpp
src/Commands/: BookTicket.cpp  BookTicket.h  MakePurchase.cpp  MakePurchase.h  ProcessPurchase.cpp  ProcessPurchase.h  RequestFlightInfo.cpp  RequestFlightInfo.h  RequestTicketInfo.cpp  RequestTicketInfo.h  ReturnTicket.cpp  ReturnTicket.h
src/data_files/: flights.txt
src/entities/: Airplane.cpp  Flight.cpp  Seat.cpp  Student.cpp  Ticket.cpp  User.cpp
src/instances/: Flight.cpp  Seat.cpp  Ticket.cpp  User.cpp
src/processors/: BookingContext.cpp  ConsoleProcessor.cpp  FileProcessor.cpp  PurchaseProcessor.cpp
tests/: ConsoleProcessorTests.cpp
